--- a/gb/22/12/10/n13881874.md
+++ b/gb/22/12/10/n13881874.md
@@ -6,44 +6,44 @@
 <h6>孙盛希因疫情已经三年没见到家人，见到爸爸与家人非常开心。（滚石唱片提供）</h6>
 <hr>
 	<p>【大纪元2022年12月10日讯】（大纪元记者林森山报导）歌手孙盛希昨天（9日）推出全新单曲《清醒梦》，她将自己的心情以及所观察到的社会样貌写成歌，希望与更多人的感情状态产生共鸣。而她因为疫情的关系，已经3年没见到家人，日前她特别飞回韩国陪家人，顺便休息充电。</p>
-<figure id="attachment_13881889" aria-describedby="caption-attachment-13881889" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881889-20221209-Sun-Sheng-Xi-003.jpg"><img decoding="async" class="size-large wp-image-13881889" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881889-20221209-Sun-Sheng-Xi-003-600x1066.jpg" alt="" width="450" b="1066" /></a><figcaption id="caption-attachment-13881889" class="wp-caption-text">孙盛希造访弟弟在首尔开的咖啡厅。（滚石唱片提供）</figcaption></figure>
+<figure id="attachment_13881889" aria-describedby="caption-attachment-13881889" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881889-20221209-Sun-Sheng-Xi-003.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-13881889" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881889-20221209-Sun-Sheng-Xi-003-600x1066.jpg" alt="" width="450" b="1066"></a><figcaption id="caption-attachment-13881889" class="wp-caption-text">孙盛希造访弟弟在首尔开的咖啡厅。（滚石唱片提供）</figcaption></figure>
 <p>身为第三代韩国华侨的孙盛希，近期回韩国和家人团聚，她把握时间跟在韩国的爸爸相处，也造访了弟弟在首尔开的咖啡厅，不过她因工作行程紧凑，只回去短短5天就又赶回台湾继续工作。</p>
 <p>但孙盛希仍然开心表示：“前阵子疫情下要和家人团聚不容易，终于回到韩国见到家人，也快速的休息充电了。”</p>
-<figure id="attachment_13881887" aria-describedby="caption-attachment-13881887" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881887-20221209-Sun-Sheng-Xi-001.jpg"><img decoding="async" class="size-large wp-image-13881887" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881887-20221209-Sun-Sheng-Xi-001-600x800.jpg" alt="" width="450" b="800" /></a><figcaption id="caption-attachment-13881887" class="wp-caption-text">孙盛希飞回韩国见家人，与爸爸合影。（滚石唱片提供）</figcaption></figure>
+<figure id="attachment_13881887" aria-describedby="caption-attachment-13881887" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881887-20221209-Sun-Sheng-Xi-001.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-13881887" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881887-20221209-Sun-Sheng-Xi-001-600x800.jpg" alt="" width="450" b="800"></a><figcaption id="caption-attachment-13881887" class="wp-caption-text">孙盛希飞回韩国见家人，与爸爸合影。（滚石唱片提供）</figcaption></figure>
 <p>其实近期品牌邀约不断的孙盛希，埋首忙于工作，谈到这次推出的新歌《清醒梦》，坦言自己已经很久没有写歌，但她常常在出席活动访问中被问到近况时，还是会回复“一直在写歌准备新专辑”。</p>
 <p>孙盛希坦露心声：“其实卡关蛮久，直到前阵子去了创作营，半强迫式的写出歌曲，没想到抒发了心里那股莫名卡卡的感觉。写完歌后状态比较好，突然有一句话在心中浮现：‘我还是音乐人无误’，希望大家也能喜欢这首歌。”</p>
-<figure id="attachment_13881890" aria-describedby="caption-attachment-13881890" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881890-20221209-Sun-Sheng-Xi-004.jpeg"><img decoding="async" class="size-large wp-image-13881890" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881890-20221209-Sun-Sheng-Xi-004-600x900.jpeg" alt="" width="450" b="900" /></a><figcaption id="caption-attachment-13881890" class="wp-caption-text">孙盛希推出全新单曲《清醒梦》。（滚石唱片提供）</figcaption></figure>
+<figure id="attachment_13881890" aria-describedby="caption-attachment-13881890" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/12/id13881890-20221209-Sun-Sheng-Xi-004.jpeg" rel="nofollow"><img decoding="async" class="size-large wp-image-13881890" src="https://i.epochtimes.com/assets/uploads/2022/12/id13881890-20221209-Sun-Sheng-Xi-004-600x900.jpeg" alt="" width="450" b="900"></a><figcaption id="caption-attachment-13881890" class="wp-caption-text">孙盛希推出全新单曲《清醒梦》。（滚石唱片提供）</figcaption></figure>
 <p>本周日（11日）孙盛希将现身台中场“我们like a drama演唱会”，她也透露会邀请不同的嘉宾朋友共同演出。</p>
 <p>年底的跨年夜，孙盛希将赶场演出，在台南与嘉义和大家一起迎接新年。而接下来的黄历年节她也预计再回韩国陪伴家人，好好休息放假。</p>
 <p>责任编辑：刘宇涵</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/5/12/n13734329.md#1">孙盛希 不执著拿奖 回到做音乐的初衷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/5/23/n13743215.md#1">孙盛希登纽约广场看板 近期成大品牌新宠儿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/6/n13818391.md#1">步出忧郁、舒适圈 孙盛希：来台10年改变最大</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/4/n13859354.md#1">孙盛希将登都市女声舞台 还做副业当老板娘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/5/n10026687.md#1" target="_blank">金剑：秦朝以后的中国是半民主社会</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/4/n10689028.md#1" target="_blank">顾雪雍：89岁老人说往事 一字一泪斥残暴</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/4/n14151209.md#1">【品读唐诗】超越时空的孤独之旅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/16/n4458549.md#1">还似洛妃乘雾去——读《红线传》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/23/n14600577.md#1">中国古代经济学大师的七条黄金法则</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/27/n14604078.md#1">【未解之谜】中共高官亲历轮回 讲述神奇的前世今生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/6/8/5/n1411769.md#1">忠肝义胆的史可法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14606062.md#1">【纪元焦点】破解习衰败之路的内在根源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14606076.md#1">【直播】参议院听证会：美国黑海战略的未来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14606141.md#1">【直播】“转折点”重返犹他州 州长出席活动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14605012.md#1">中共确定四中全会召开日期 习去留引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14605020.md#1">王毅见朝鲜外相 赵立坚现身会场引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14605041.md#1">天文学家发现一颗流浪行星有强烈极光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/28/n14604591.md#1">《暴君的厨师》谢幕 林润娥李彩玟等分享感言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14605587.md#1">《暴君的厨师》李彩玟25岁生日 与女友晒蛋糕照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14605102.md#1">孙德荣称于朦胧托梦鸣冤 5小时梦境历历在目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14605262.md#1">大陆歌手居来提新疆开唱 呼吁歌迷记住于朦胧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14605011.md#1">孙德荣办超渡法会替于朦胧“申冤” 盼讨公道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14605506.md#1">为何户外盆栽植物不宜放在地上？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14605004.md#1">你家小狗会做梦吗？ 都梦到什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14604835.md#1">为什么有时候刚刷完牙还是有口臭？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/25/n14602309.md#1">月亮是神人造的？ 山中逢修补月球的人指点迷津</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14605680.md#1">预订廉价航班应该注意什么“危险信号”？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/12/10/n13881874.htm">3年未面见家人 孙盛希飞回韩国与爸爸团聚</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/12/10/n13881874.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
